--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "test": "jest",
     "build": "tsc",
     "start": "node buid/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "setup": "npm install && npm run build"
   },
   "dependencies": {
     "@noble/curves": "^1.2.0",
