Added the host bot to be a part of this repo.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@noble/hashes": "^1.3.2",
     "@types/express": "^4.17.19",
     "express": "^4.18.2",
+    "nostr-bot-app": "^0.0.8",
     "ws": "^8.14.2",
     "yaml": "^2.3.2"
   }
